    directive code.

* docutils/parsers/rst/__init__.py:

  - Added ``Directive`` base class.
  - Added ``DirectiveError`` base class.

* docutils/parsers/directives/:

  - Refactored all reStructuredText directives to use the new
    object-oriented directive interface.  Errors are now (mostly)
    thrown using the new ``DirectiveError`` class.

* docutils/writers/html4css1/__init__.py:

  - Moved template functionality from the PEP/HTML writer here.
  - Expanded the fragments available in the ``parts`` attribute.

* docutils/writers/html4css1/template.txt: Added to project.

* docutils/writers/pep_html/:

  - Moved template functionality to the HTML writer.

* docutils/writers/s5_html/__init__.py:

  - Added ``view_mode`` & ``hidden_controls`` settings
    (``--view-mode`` & ``--hidden-controls/--visible-controls``
    options).

* docutils/writers/latex2e/__init__.py:

  - Fix: Renaming contents section does not work with latex writer; SF
    bug #1487405.
  - Applied patch for custom roles with classes from Edward Loper.
  - Fixed bug that caused crashes with more than 256 lists.

* docutils/writers/pep_html/__init__.py:

  - Changed to support new python.org website structure and
    pep2pyramid.py.

* tools/editors/emacs/rst.el:

  - Changed license to "GPL".
  - Added ``rst-straighten-decorations`` function.
  - The ``compile`` module is now always loaded.
  - Added ``rst-toggle-line-block`` function.

* setup.py:

  - Provide descriptive error message if distutils is missing.


Release 0.4 (2006-01-09)
========================

* General:

  - Updated the project policies for trunk/branch development &
    version numbering.

* docutils/__init__.py:

  - Added ``__version_details__`` attribute to describe code source
    (repository/snapshot/release).
  - Replaced ``default_transforms`` attribute of TransformSpec with
    ``get_transforms()`` method.

* docutils/core.py:

  - Added ``publish_doctree`` and ``publish_from_doctree`` convenience