@@ -14,7 +14,7 @@ conflicting imports like this one::
 
 __docformat__ = 'reStructuredText'
 
-from docutils import nodes, utils
+from docutils import nodes, utils, languages
 from docutils.transforms import Transform
 
 
@@ -35,7 +35,7 @@ class Compound(Transform):
         <paragraph classes="continued">
     """
 
-    default_priority = 810
+    default_priority = 910
 
     def apply(self):
         for compound in self.document.traverse(nodes.compound):
@@ -48,3 +48,41 @@ class Compound(Transform):
                     child['classes'].append('continued')
             # Substitute children for compound.
             compound.replace_self(compound[:])
+
+
+class Admonitions(Transform):
+
+    """
+    Transform specific admonitions, like this:
+
+        <note>
+            <paragraph>
+                 Note contents ...
+
+    into a generic admonition, like this::
+
+    <admonition classes="note">
+        <title>
+            Note
+        <paragraph>
+            Note contents...
+
+    The admonition title is localized.
+    """
+
+    default_priority = 920
+
+    def apply(self):
+        lcode = self.document.settings.language_code
+        language = languages.get_language(lcode)
+        for node in self.document.traverse(nodes.Admonition):
+            node_name = node.__class__.__name__
+            # Set class, so that we know what node this admonition came from.
+            node['classes'].append(node_name)
+            if not isinstance(node, nodes.admonition):
+                # Specific admonition.  Transform into a generic admonition.
+                admonition = nodes.admonition(node.rawsource, *node.children,
+                                              **node.attributes)
+                title = nodes.title('', language.labels[node_name])
+                admonition.insert(0, title)
+                node.replace_self(admonition)
